--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% block head %}
-    <link href="dist/css/datepicker.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - ITAB
-    </title>
-    {% endblock %}
-  </head>
-  <body>
+
+<head>
+  <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>{% block title %}{% endblock %} - ITAB</title>
+</head>
+
+<body>
+  <div class="section">
     <div class="container">
-
-      <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{url_for('index')}}">Gestione DDT
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-            </span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            </ul>
-
-            <span class="navbar-text">
-              {% if login %}
-              Sei autenticato come {{ username }},
-              <a href="{{url_for('logout')}}">Logout
-              </a>.
-              {% endif %}
-            </span>
-          </div>
+      <div class="columns is-flex is-vcentered">
+        <div class="column">
+          <h1 class="title">
+            {{ self.title() }}
+          </h1>
+          <h1 class="subtitle">
+            {% if login %}
+            Esegui il <a href="{{url_for('logout')}}">logout</a>
+            {% endif %}
+          </h1>
         </div>
-      </nav>
-
+        <div class="column is-one-fifth">
+          {% block bar %}
+          {% endblock %}
+        </div>
+      </div>
       {% block content %}
       {% endblock %}
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
-    {% block js %}{%endblock%}
-  </body>
+  </div>
+
+
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Certificazioni CE</strong> by ITAB - La fortezza</a>. Source code available at 
+        <a href="https://github.com/hotbrightsunshine/certificazioni-ce">GitHub</a>.
+      </p>
+    </div>
+  </footer>
+
+  {% block js %}
+  {% endblock%}
+</body>
+
 </html>
