--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -43,6 +43,7 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   {% block js %}
   {% endblock%}
 </body>
