--- a/flaskr/templates/articolo_view.html
+++ b/flaskr/templates/articolo_view.html
@@ -7,6 +7,22 @@
 
 {% block content %}
 
+<noscript>
+    <article class="message is-danger mb-3">
+        <div class="message-header">
+          <p>Javascript è disabilitato</p>
+        </div>
+        <div class="message-body">
+            Questa pagina utilizza alcune funzioni Javascript che sono necessarie per la validazione dei moduli, pertanto è necessario attivarlo temporaneamente
+            per il suo funzionamento corretto. 
+            In particolare, utilizziamo una libreria Javascript chiamata JQuery per accedere più facilmente ai componenti della pagina. Se non ti fidi, 
+            e vuoi controllare, puoi consultare il codice sorgente di questo sito web <a href="https://github.com/hotbrightsunshine/certificazioni-ce">a questa pagina GitHub</a>.
+            Se vuoi, puoi abilitare Javascript soltanto per compilare il modulo dei materiali e delle saldature per poi disabilitarlo nuovamente.
+        </div>
+      </article>
+</noscript>
+
+<div class="title">Lavorazioni e controlli</div>
 <div class="columns">
     <div class="column">
         <div class="box">
@@ -28,7 +44,7 @@
                     <div class="column">
                         <div class="checkbox">
                             <input type="checkbox" name="Saldatura" {% if articolo['CEARSALD'] == 1 %} checked
-                                {% endif %} onclick="toggleHide('saldatura')" id="" saldatura-checkbox>
+                                {% endif %} onclick="toggleHide('saldatura')" id="saldatura-checkbox">
                             Saldatura
                         </div>
                     </div>
@@ -92,6 +108,9 @@
 
         </div>
     </div>
+</div>
+
+<div class="columns">
     {% if can_saldatura %}
     <div class="column" id="saldatura">
         <div class="box">
@@ -188,18 +207,28 @@
     {% endif %}
 </div>
 
+
+{% if not isce %}
+<div class="title">Materiali</div>
 <div class="columns">
     <div class="column">
+        {% if err_apporto_mancante and can_saldatura %}
+        <div class="notification is-danger">
+            Questo articolo è stato lavorato con saldatura, e richiede l'imissione di almeno un materiale di
+            apporto; perfavore inseriscine uno. Se pensi che sia un errore, controlla i campi e correggi.
+        </div>
+        {% endif %}
+
         <div class="box">
             <h1 class="subtitle">
-                Materiali di origine
+                Aggiungi un materiale di origine
             </h1>
 
             <div class="field">
                 <label for="" class="label">Origine del materiale</label>
                 <div class="select is-fullwidth">
                     <div id="aggiunta-materiali">
-                        <select id="new_materiale">
+                        <select id="new-materiale">
                             <option value="certificato-collaudo">Materiale con certificato di collaudo</option>
                             <option value="conto-lavorazione">Materiale in conto lavorazione</option>
                         </select>
@@ -207,220 +236,244 @@
                 </div>
             </div>
 
-            <form id="form-conto-lavorazione"
-                action="{{url_for('add_materiale_conto_lavorazione', ddtnum=ddtnum, artnum=artnum, matnum=0)}}">
+            <div id="form-conto-lavorazione" class="is-hidden">
+                <form method="POST"
+                    action="{{url_for('add_materiale_conto_lavorazione', ddtnum=ddtnum, artnum=artnum, matnum=0)}}">
 
-                <div class="field">
-                    <label for="" class="label">Tipo di materiale</label>
-                    <div class="select is-fullwidth">
-                        <select name="tipoMateriale">
-                            {% if can_saldatura %}
-                            <option value="A">Materiale d'apporto</option>
-                            {% endif %}
-                            <option value="B">Materiale di base</option>
-                        </select>
+                    <div class="field">
+                        <label for="" class="label">Tipo di materiale</label>
+                        <div class="select is-fullwidth">
+                            <select name="tipoMateriale">
+                                {% if can_saldatura %}
+                                <option value="A">Materiale d'apporto</option>
+                                {% endif %}
+                                <option value="B">Materiale di base</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
 
+                    <div class="field">
+                        <label class="label">Codice del Componente</label>
+                        <input class="input" type="text" name="codiceComponente">
+                    </div>
+
+                    <div class="field">
+                        <label class="label">Numero della colata</label>
+                        <input class="input" type="text" name="numeroColata" id="">
+                    </div>
+
+                    <div class="field">
+                        <label class="label">Punzonatura</label>
+                        <input class="input" type="text" name="punzonatura" id="">
+                    </div>
+
+                    <button type="submit" class="button is-primary is-fullwidth">Salva</button>
+                </form>
+            </div>
+
+            <div id="form-certificato-collaudo" class="is-hidden">
+
+                <form action="{{ url_for('add_materiale_collaudo', ddtnum = ddtnum, artnum= artnum, matnum=0) }}"
+                    method="post">
+
+                    <div class="field">
+                        <label for="" class="label">Certificazione DOP</label>
+                        <label class="checkbox">
+                            <input type="checkbox" name="dop">
+                            Possiedo la DOP
+                        </label>
+                    </div>
+
+                    <div class="field">
+                        <label for="" class="label">Tipo del materiale</label>
+                        <div class="select is-fullwidth">
+                            <select name="tipoMateriale2">
+                                {% if can_saldatura %}
+                                <option value="A">Materiale d'apporto</option>
+                                {%endif%}
+                                <option value="B">Materiale di base</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <label for="" class="label">Certificato di collaudo</label>
+                        <input type="text" class="input" name="certificatoCollaudo">
+                    </div>
+
+                    <div class="field">
+                        <label for="" class="label">Data</label>
+                        <input type="date" class="input" name="dataCertificato">
+                    </div>
+
+                    <div class="field">
+                        <label for="" class="label">Numero della colata</label>
+                        <input type="text" class="input" name="numeroColata">
+                    </div>
+
+                    <button class="button is-primary is-fullwidth" type="submit">Salva</button>
+
+                </form>
+
+            </div>
+        </div>
+    </div>
+    {% if materiali|length > 0 %}
+    <div class="column" id="lista-materiali">
+        {% for mat in materiali %}
+        <div class="box">
+            {% if mat['CEORORIG'] == '1' %}
+            <h2 class="subtitle">Materiale in conto lavorazione</h2>
+            <div class="field">
+                <p><strong>Codice componente: </strong>{{mat['CEORCDPAR']}}</p>
+            </div>
+            <div class="field">
+                <p><strong>Punzonatura: </strong>{{mat['CEORPUNNR']}}</p>
+            </div>
+
+
+            {% else %}
+            <h2 class="subtitle">Materiale con certificato di collaudo</h2>
+            <div class="field">
+                <p><strong> Certificato di collaudo: </strong>{{mat['CEORCLLNR']}}</p>
+            </div>
+            <div class="field">
+                <p><strong>Data:</strong> {{mat['CEORCLLDT']}}</p>
+            </div>
+
+            {% endif %}
+            <div class="field">
+                <p><strong>Numero della colata:</strong> {{mat['CEORCOLNR']}}</p>
+            </div>
+
+            <a href="{{url_for('delete_materiale', matnum=mat['CEORID'], artnum=artnum, ddtnum=ddtnum)}}"
+                class="button is-danger is-fullwidth">Elimina</a>
+        </div>
+
+        {% endfor %}
+    </div>
+    {% endif %}
+</div>
+
+
+{% else %}
+<div class="title">File documentazione DOP</div>
+<div class="columns">
+    <div class="column">
+        <div id="file-upload" class="box">
+            <form method="post">
                 <div class="field">
-                    <label class="label">Codice del Componente</label>
-                    <input class="input" type="text" name="codiceComponente">
+                    <label for="" class="label">File DOP</label>
+                    <input type="file" name="file">
+
                 </div>
-
-                <div class="field">
-                    <label class="label">Numero della colata</label>
-                    <input class="input" type="text" name="numeroColata" id="">
-                </div>
-
-                <div class="field">
-                    <label class="label">Punzonatura</label>
-                    <input class="input" type="text" name="punzonatura" id="">
-                </div>
-
-                <button type="submit" class="button is-primary is-fullwidth">Salva</button>
-
+                <button class="button is-primary" type="submit">Invia file</button>
             </form>
+        </div>
+    </div>
+</div>
+{% endif %}
 
-            <form action="{{ url_for('add_materiale_collaudo', ddtnum = ddtnum, artnum= artnum, matnum=0) }}"
-                id="form-certificato-collaudo" method="post">
-
-                <label class="checkbox">
-                    <input type="checkbox" name="dop">
-                    Possiedo la DOP
-                </label>
-
+<div class="title">Ordini</div>
+<div class="columns">
+    <div class="column">
+        {% if err_troppi_articoli %}
+        <div class="notification is-danger">
+            Ci sono troppi ordini per questo articolo. La quantità di tutti gli ordini
+            non può superare la quantità totale dell'articolo.
+        </div>
+        {% endif %}
+        <div class="box">
+            <h1 class="subtitle">Inserisci un nuovo ordine</h1>
+            <form action="{{url_for('add_order', ddtnum=ddtnum, artnum=artnum)}}" method="post">
                 <div class="field">
-                    <label for="" class="label">Tipo del materiale</label>
-                    <div class="select is-fullwidth">
-                        <select name="tipoMateriale2">
-                            {% if can_saldatura %}
-                            <option value="A">Materiale d'apporto</option>
-                            {%endif%}
-                            <option value="B">Materiale di base</option>
-                        </select>
-                    </div>
+                    <label for="" class="label">Numero dell'ordine</label>
+                    <input type="text" name="numeroOrdine" class="input" required>
                 </div>
-                
-
-                <div class="field">
-                    <label for="" class="label">Certificato di collaudo</label>
-                    <input type="text" class="input" name="certificatoCollaudo">
-                </div>
-
                 <div class="field">
                     <label for="" class="label">Data</label>
-                    <input type="text" class="input" name="dataCertificato">
+                    <input type="date" class="input" name="dataOrdine" required>
                 </div>
-
                 <div class="field">
-                    <label for="" class="label">Numero della colata</label>
-                    <input type="text" class="input" name="numeroColata">
+                    <label for="" class="label">Quantità</label>
+                    <input type="number" name="quantitaOrdine" min="0" max="{{max_qty}}" class="input" required>
                 </div>
-
-                <button class="button is-primary is-fullwidth" type="submit">Aggiungi</button>
-
-
+                <button class="button is-primary is-fullwidth" {% if err_troppi_articoli or is_difference_zero %}
+                    disabled {% endif %} type="submit">Salva</button>
             </form>
         </div>
     </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-{% if err_apporto_mancante and can_saldatura %}
-<h3 style="color:red">Questo articolo è stato lavorato con saldatura, e richiede l'imissione di almeno un materiale di
-    apporto; perfavore inseriscine uno. Se pensi che sia un errore, controlla i campi e correggi.</h3>
-{% endif %}
-
-{% if not isce %}
-<div>
-    <h1>Materiali di origine</h1>
-</div>
-{% else %}
-<div id="file-upload" class="border p-3">
-    <form action="" method="post">
-        <h1>Upload DOP</h1>
-        <div class="input-group mb-3">
-            <input type="file" class="form-control" id="file" name="file" required>
-            <button class="btn btn-primary" type="submit">Invia file</button>
+    {% if ordini|length > 0 %}
+    <div class="column" id="ordini-list">
+        {% for ord in ordini %}
+        <div class="box">
+            <div class="field">
+                <p><strong>Numero ordine: </strong>{{ord['CEOANUME']}}</p>
+            </div>
+            <div class="field">
+                <p><strong>Data: </strong>{{ord['CEOADATA']}}</p>
+            </div>
+            <div class="field">
+                <p><strong>Quantità: </strong>{{ord['CEOAQTY']}}</p>
+            </div>
+            
+            <a href="{{url_for('delete_ordine', artnum=artnum, ddtnum=ddtnum, ordnum=ord['CEOAID'])}}"
+                class="button is-danger">Elimina</a>
         </div>
-    </form>
-</div>
-{% endif %}
-
-<div id="lista-materiali">
-    {% for mat in materiali %}
-    <div class="row rounded border my-3">
-        {% if mat['CEORORIG'] == '1' %}
-        <h2>Materiale in conto lavorazione</h2>
-        <p>Codice componente: {{mat['CEORCDPAR']}}</p>
-        <p>Punzonatura: {{mat['CEORPUNNR']}}</p>
-        {% else %}
-        <h2>Materiale con certificato di collaudo</h2>
-        <p>Certificato di collaudo: {{mat['CEORCLLNR']}}</p>
-        <p>Data: {{mat['CEORCLLDT']}}</p>
-        {% endif %}
-        <p>Numero della colata: {{mat['CEORCOLNR']}}</p>
-        <a href="{{url_for('delete_materiale', matnum=mat['CEORID'], artnum=artnum, ddtnum=ddtnum)}}"
-            class="btn btn-danger">Elimina</a>
+        {%endfor%}
+        
     </div>
-    {% endfor %}
+    {% endif %}
 </div>
 
-<div id="ordini">
-    <form action="{{url_for('add_order', ddtnum=ddtnum, artnum=artnum)}}" method="post">
-        <h1>Ordini</h1>
-        {% if err_troppi_articoli %}
-        <h3 style="color:red">Troppi articoli! Controlla i campi e riprova. </h3>
-        {% endif %}
-        <div class="row rounded border p-3 m-3">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Numero</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
-                    aria-describedby="inputGroup-sizing-default" name="numeroOrdine" id="numeroOrdine" required>
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Data</span>
-                <input type="date" class="form-control" aria-label="Sizing example input"
-                    aria-describedby="inputGroup-sizing-default" name="dataOrdine" id="dataOrdine" required>
-            </div>
-            <div class="input-group mb-3">
 
-                <span class="input-group-text" id="inputGroup-sizing-default">Quantità</span>
-                <input type="number" class="form-control" min="0" max="{{max_qty}}" name="quantitaOrdine"
-                    id="quantitaOrdine" required>
-                <button class="btn btn-primary" type="submit" {% if err_troppi_articoli or is_difference_zero %}
-                    disabled {% endif %}>Aggiungi</button>
-            </div>
 
-        </div>
-    </form>
-</div>
-
-<div id="ordini-list">
-    {% for ord in ordini %}
-    <div class="row border my-3">
-        <p>Numero ordine: {{ord['CEOANUME']}}</p>
-        <p>Data: {{ord['CEOADATA']}}</p>
-        <p>Quantità: {{ord['CEOAQTY']}}</p>
-        {{ord}}
-        <a href="{{url_for('delete_ordine', artnum=artnum, ddtnum=ddtnum, ordnum=ord['CEOAID'])}}"
-            class="btn btn-danger">Elimina</a>
-    </div>
-
-    {% endfor %}
-</div>
 {% endblock %}
+
+
 {% block js %}
-<script src="dist/js/datepicker.min.js"></script>
-<script src="dist/js/locales/fr.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 <script>
     function hideFormMateriale() {
-        if ($("#new_materiale").val() == "certificato-collaudo") {
+        if ($("#new-materiale").val() == "certificato-collaudo") {
             console.log("form certificato di collaudo")
-            $("#form-certificato-collaudo").removeClass("d-none");
-            $("#form-conto-lavorazione").addClass("d-none");
+            $("#form-certificato-collaudo").removeClass("is-hidden");
+            $("#form-conto-lavorazione").addClass("is-hidden");
         } else {
             console.log("form conto lavorazione")
-            $("#form-certificato-collaudo").addClass("d-none");
-            $("#form-conto-lavorazione").removeClass("d-none");
+            $("#form-certificato-collaudo").addClass("is-hidden");
+            $("#form-conto-lavorazione").removeClass("is-hidden");
         }
     }
 
-    $("#new_materiale").on("change", hideFormMateriale);
+    $("#new-materiale").on("change", hideFormMateriale);
 
     function wipe() {
-        $("form-collaudo").addClass("d-none")
-        $("form-conto-lavorazione").addClass("d-none")
+        $("#form-certificato-collaudo").addClass("is-hidden")
+        $("#form-conto-lavorazione").addClass("is-hidden")
         hideFormMateriale()
-        $("div.form").addClass("d-none")
+        $("div.form").addClass("is-hidden")
     }
 
     window.onload = function () {
-        if (!$('#saldatura-checkbox').prop('checked')) {
-            $("#saldatura").addClass("d-none");
+        if ($('#saldatura-checkbox').prop('checked')) {
+            $("#saldatura").removeClass("is-hidden");
+
+        } else {
+            $("#saldatura").addClass("is-hidden");
         }
+
         hideFormMateriale();
         wipe();
+
     }
 
     function toggleHide(attr) {
-        console.log("ciao")
-        if ($("#" + attr).hasClass("d-none")) {
-            $("#" + attr).removeClass("d-none")
+        if ($("#" + attr).hasClass("is-hidden")) {
+            $("#" + attr).removeClass("is-hidden")
         } else
-            $("#" + attr).addClass("d-none")
+            $("#" + attr).addClass("is-hidden")
     }
 </script>
-
 {% endblock %}
