--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
@@ -13,13 +14,18 @@
     <div class="container">
       <div class="columns is-flex is-vcentered">
         <div class="column">
-          <h1 class="title">
+          <h1 class="title is-1">
             {{ self.title() }}
           </h1>
           <h1 class="subtitle">
+            {% if self.title() == "I tuoi DDT" %}
             {% if login %}
             Esegui il <a href="{{url_for('logout')}}">logout</a>
             {% endif %}
+            {% else %}
+            Torna ai <a href="{{url_for('index')}}">tuoi DDT</a>
+            {%endif%}
+            
           </h1>
         </div>
         <div class="column is-one-fifth">
@@ -27,6 +33,7 @@
           {% endblock %}
         </div>
       </div>
+      <hr>
       {% block content %}
       {% endblock %}
     </div>
@@ -43,7 +50,6 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
   {% block js %}
   {% endblock%}
 </body>
