--- a/flaskr/static/css/master.css
+++ b/flaskr/static/css/master.css
@@ -1,1 +1,12 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    font-family: "Fira Sans";
+}
+
+#wrapper {
+    flex: 1;
+}
