--- a/flaskr/templates/layout/father.html
+++ b/flaskr/templates/layout/father.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="//brick.freetls.fastly.net/Fira+Sans:400">
   <link rel="stylesheet" href="{{url_for('static', filename='css/master.css')}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="section">
+  <div class="section" id="wrapper">
     <div class="container">
       <div class="columns is-flex is-vcentered">
         <div class="column">
